Сборка докер образа - первая версия.